[gd_scene load_steps=8 format=3 uid="uid://dx5i04ygfxw3m"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="1_wut40"]
[ext_resource type="Script" path="res://scripts/battle/battle_scene/summon_minion_panel.gd" id="2_2fkw7"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="3_e2762"]
[ext_resource type="Script" path="res://scripts/menus/scroll_better_follow.gd" id="4_6dk5j"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="4_kkthk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ga0k1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0bmve"]

[node name="SummonMinionPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wut40")
script = ExtResource("2_2fkw7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ga0k1")

[node name="SummonMinionTitle" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 12.0
offset_bottom = 62.0
grow_horizontal = 2
theme = ExtResource("3_e2762")
bbcode_enabled = true
text = "[center]Summon Minion[/center]"
fit_content = true

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = 66.0
offset_right = -75.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_0bmve")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Panel" node_paths=PackedStringArray("boxContainer")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0
script = ExtResource("4_6dk5j")
boxContainer = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" parent="Panel" instance=ExtResource("4_kkthk")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -56.0
offset_right = 25.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="visibility_changed" from="Panel/Panel/ScrollContainer" to="Panel/Panel/ScrollContainer" method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
